--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Formulario con AJAX</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
 
-  <h2>Formulario de Contacto</h2>
-  <form id="contactForm">
-    <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" name="nombre" required><br><br>
+  <div class="container form-wrapper">
 
-    <label for="email">Correo:</label>
-    <input type="email" id="email" name="email" required><br><br>
+    <div class="row shadow-lg rounded overflow-hidden">
+      <!-- Columna Imagen -->
+      <div class="col-md-6 p-0">
+        <img src="imagen_registro.avif" alt="Imagen decorativa"
+          class="img-fluid h-100 w-100 object-fit-cover">
+      </div>
 
-    <label for="mensaje">Mensaje:</label><br>
-    <textarea id="mensaje" name="mensaje" rows="4" cols="50" required></textarea><br><br>
+      <!-- Columna del form -->
+      <div class="col-md-6 bg-white p-5 d-flex flex-column justify-content-center">
+        <h2 class="mb-4 text-center">Formulario de Contacto</h2>
+        <form id="contactForm">
+          <div class="mb-3">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required><br><br>
+          </div>
 
-    <button type="submit">Enviar</button>
-  </form>
+          <div class="mb-3">
+            <label for="email">Correo:</label>
+            <input type="email" id="email" name="email" required><br><br>
+          </div>
 
-  <p id="respuesta"></p>
+          <div class="mb-3">
+            <label for="mensaje">Mensaje:</label><br>
+            <textarea id="mensaje" name="mensaje" rows="4" cols="50" required></textarea><br><br>
+          </div>
+
+          <div class="d-flex justify-content-between">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="button" id="limpiar" class="btn btn-secondary">Limpiar</button>
+          </div>
+
+          <div id="respuesta"></div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    document.getElementById('contactForm').addEventListener('submit', function(e) {
-      e.preventDefault(); // Evita el envío tradicional
+    const form = document.getElementById('contactForm');
+    const respuesta = document.getElementById('respuesta');
+    const limpiarBtn = document.getElementById('limpiar');
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
 
       const data = {
         nombre: document.getElementById('nombre').value,
@@ -39,20 +74,30 @@
         },
         body: JSON.stringify(data)
       })
-      .then(response => {
-        if (!response.ok) throw new Error('Error en la respuesta');
-        return response.json();
-      })
-      .then(json => {
-        document.getElementById('respuesta').innerText = 'Mensaje enviado correctamente ✅';
-        console.log('Respuesta del backend:', json);
-      })
-      .catch(err => {
-        document.getElementById('respuesta').innerText = 'Hubo un error ❌';
-        console.error('Error al enviar:', err);
-      });
+        .then(response => {
+          if (!response.ok) throw new Error('Error en la respuesta');
+          return response.json();
+        })
+        .then(json => {
+          respuesta.innerHTML = `<div class="alert alert-success" role="alert">
+          ✅ Mensaje enviado correctamente.
+        </div>`;
+          form.reset();
+          console.log('Respuesta del backend:', json);
+        })
+        .catch(err => {
+          respuesta.innerHTML = `<div class="alert alert-danger" role="alert">
+          ❌ Hubo un error al enviar el formulario.
+        </div>`;
+          console.error('Error al enviar:', err);
+        });
+    });
+    limpiarBtn.addEventListener('click', () => {
+      form.reset();
+      respuesta.innerHTML = '';
     });
   </script>
 
 </body>
+
 </html>
